--- a/help/src/hid00010.htm
+++ b/help/src/hid00010.htm
@@ -379,8 +379,8 @@
       画像が無指定の場合は、<a href="hid00023.htm#Color">オプション設定 - フォント・配色</a>で指定されている「<b>分割境界線の色</b>」でフラットに塗られます。<br>
       なお、<a href="hid00024.htm">オプション設定 - 一般2 - テキストプレビュー</a> で「<b>末尾分割表示</b>」がチェックされている場合に表示される分割境界線は、「<b>副</b>」ですが幅は
       4px 固定となります。<br>
-      <br><br>
     </dd>
+    <hr class="light"><br>
 
     <dt class="no_bg_indent1" id="ShowPreview"><img src="chkbox.png" alt=""> プレビューを表示</dt>
     <dd>ファイラー画面に<b>プレビュー</b>を表示します。<br>
