--- a/help/src/hid00018.htm
+++ b/help/src/hid00018.htm
@@ -135,8 +135,8 @@
       <div class="indent1">
         インターネット接続が切れたときに警告を出します。<br>
       </div>
-      <br><br>
     </dd>
+    <hr class="light"><br>
 
     <dt class="no_bg_indent1"><img src="chkbox.png" alt=""> メッセージをヒント表示</dt>
     <dd>警告メッセージなどをヒントウィンドウで表示します。ステータスバーを非表示にしている場合などに役立ちます。<br>
