--- a/help/src/hid00024.htm
+++ b/help/src/hid00024.htm
@@ -180,8 +180,8 @@
       <img src="edit.png" alt=""> <b>行以上なら分割</b>で、分割表示を有効にする行数を指定できます。<br>
       なお、「<b>最大行数</b>」を超えるファイルでも実際の末尾が表示されますが、総行数が不明なため、行番号は最終行からの相対表示(負数)になります。<br>
       表示/非表示の切り替えは、テキストプレビューの右クリックメニューからも可能です。<br>
-      <br><br>
     </dd>
+    <hr class="light"><br>
 
     <dt class="no_bg"><img src="chkbox.png" alt=""> アーカイブ内の情報表示(一時解凍)</dt>
     <dd>
