--- a/help/src/hid00052.htm
+++ b/help/src/hid00052.htm
@@ -80,6 +80,13 @@
       <br>
     </dd>
 
+    <dt class="no_bg_indent1"><img src="combobox.png" alt=""> 除外Dirs</dt>
+    <dd>
+      検索から除外するディレクトリのマスクを指定します。マスクは ; (セミコロン)で区切って複数指定できます。<br>
+      なおカレントで選択されているディレクトリは除外されません。<br>
+      <br>
+    </dd>
+
     <dt><img src="grpbox.png" alt=""> 更新日付</dt>
     <dd>
       <span class="btn_frame">本日</span>ボタンを押すと、今日の日付が設定されます。また<span class="btn_frame">-1D</span>ボタンでは現在設定されている日付に対して相対的に1日前、また<span class="btn_frame">-7D</span>ボタンでは7日前、<span class="btn_frame">-1M</span>ボタンでは1月前、<span class="btn_frame">-1Y</span>ボタンでは1年前に変更します。<br>
@@ -87,8 +94,13 @@
       条件が「<b>以降</b>」の場合、設定されている日付を含めて、それより新しいファイルがマッチします。<br>
       条件が「<b>一致</b>」の場合、日付の設定にワイルドカード <b>?</b> を使えます。<br>
       　<b>例</b>: <span class="inp_box">2???/04/??</span> 2000年以降の4月のファイルを検索<br>
-      <br>
-      入力欄が全選択または選択無しの状態で貼り付けを行おうとした場合、可能ならクリップボード内容を yyyy/mm/dd 形式に変換して貼り付けます。～年～月～日 などの形式にも対応。<br>
+      <div class="spc_box">
+        <img src="chkbox.png" alt=""> <b>相対</b> をチェックしていると、結果リストで <a href="hid00005.htm#SaveAsFindSet">SaveAsFindSet</a> コマンドを実行したとき、日付設定を今日からの相対指定として保存します。その検索設定ファイルを用いると、常に今日の日付から相対的に検索を行うため、例えば「最近７日以降のファイル」などの検索が可能になります。<br>
+        このオプションは検索設定ファイルにかかわるもので、このダイアログでの検索には影響しません。<br>
+      </div>
+      <div class="spc_box">
+        入力欄が全選択または選択無しの状態で貼り付けを行おうとした場合、可能ならクリップボード内容を yyyy/mm/dd 形式に変換して貼り付けます。～年～月～日 などの形式にも対応。<br>
+      </div>
       <br>
     </dd>
 
