--- a/help/src/hid00061.htm
+++ b/help/src/hid00061.htm
@@ -6,9 +6,10 @@
   <title>文字列置換</title>
   <link rel="stylesheet" type="text/css" href="help.css">
   <object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
-    <param name="Keyword" value="GREP">
-    <param name="Keyword" value="正規表現">
-    <param name="Keyword" value="文字列置換">
+	<param name="Keyword" value="GREP">
+	<param name="Keyword" value="正規表現">
+	<param name="Keyword" value="置換数一覧">
+	<param name="Keyword" value="文字列置換">
   </object>
 </head>
 
