--- a/help/src/hid00109.htm
+++ b/help/src/hid00109.htm
@@ -26,17 +26,25 @@
     <b>お願い</b><br>
     不具合報告の際は、現象の内容や再現手順、頻度、動作環境(ヘルプメニュー -
     「<b>動作環境情報をコピー</b>」)などを具体的に詳しく書いてください。直前の操作内容はコマンド履歴(CmdHistory)で、実行結果などはタスクログで確認できます。<br>
-    曖昧で意味がとれないような内容には対応しかねます。またシステムや環境に起因すると考えられる問題や、こちらではまったく再現できない現象については、対処が困難です。<br>
     <hr>
-    疑問点などがある場合、まずは<b>ヘルプ</b>をお読みください。コマンドについては <a href="hid00101.htm">機能別索引</a> もありますし、ダイアログなどでは<span
-      class="btn_frame">F1</span>キーで状況依存ヘルプが表示されますので。また、<a href="hid00104.htm">よくある質問</a> や <a
-      href="hid00103.htm">既知の問題</a> も確認してみてください。ヘルプを読まずに、他のファイラーからの類推や想像で判断していると、思わぬ誤解に陥り無駄な時間を費やすことになりかねません。<br>
+    疑問点などがある場合、まずは<b>ヘルプ</b>をお読みください。ダイアログなどでは<span class="btn_frame">F1</span>キーで状況依存ヘルプが表示されます。<br>
     <hr>
     ※過去のバージョンを <a href="http://nyanfi.sakura.ne.jp/archive/nyanfi/"
       target="_blank">nyanfi.sakura.ne.jp/archive/nyanfi/</a> で公開しています。最新バージョンに不具合があった場合や、別バージョンと比較したいときなどに利用してください。
   </div>
 
   <dl>
+    <dt>V16.19 <span class="ver_date">(2024-01-19)</span></dt>
+    <dd>
+      ・ファイル(/ディレクトリ)名検索ダイアログに「除外Dirs」を追加。検索から除外するディレクトリのマスクを指定できます(; で区切って複数指定可)。<br>
+      ・ファイル(/ディレクトリ)名検索ダイアログの更新日付に「相対」オプションを追加。結果リストで SaveAsFindSet コマンドを実行したとき、日付設定を今日からの相対指定として保存します。その検索設定ファイルを用いると、常に今日の日付から相対的に検索を行うため、例えば「最近７日以降のファイル」などの検索が可能になります。<br>
+      ・ファイル(/ディレクトリ)名検索以外に、タグ検索、栞マーク検索、フォルダアイコン検索、ハードリンク列挙の結果リストについても SaveAsFindSet/LoadFindSet コマンドを利用できるようにしました。なお、検索設定ファイル保存時に、その時点でのソートモードも含めるようにしました。<br>
+      ・LoadFindSet_* による検索設定の選択は、ポップアップメニューではなくダイアログで行うようにしました。<br>
+      ・オプション設定 - テキストビューア に「禁則処理」を追加。指定した禁則文字について、ぶら下げ/追い出し処理を行います。また「ワードラップ」をチェックすると、英単語の途中で折り返さないようになります。<br>
+      ・文字列検索(GREP)で「次行表示」をチェックしている場合、空行はカウントされませんが改行マークは表示するようにしました。<br>
+      ・文字列検索の「マッチ数一覧」を「マッチ行数一覧」に訂正。<br>
+    </dd>
+
     <dt>V16.18 <span class="ver_date">(2024-01-16)</span></dt>
     <dd>
       ・文字列検索(GREP)で、ファイル毎のマッチ数一覧を表示できるようにしました。表示メニューまたはF5キーで結果リスト/マッチ数一覧を切り替えられます。マッチ数一覧では、ファイル名とマッチ数の他にファイルサイズやタイムスタンプ、サブディレクトリ名(ワークリストの場合はフルパス)も表示されます。同様にして文字列置換では、置換数一覧に切り替えられます。<br>
