--- a/help/src/hid00200.htm
+++ b/help/src/hid00200.htm
@@ -30,6 +30,9 @@
       <td><a href="hid00004.htm">画面構成</a></td>
     </tr>
     <tr>
+      <td><a href="hid00106.htm">用語について</a></td>
+    </tr>
+    <tr>
       <td><a href="hid00005.htm">コマンド</a></td>
     </tr>
   </table>
