--- a/help/src/hid00109.htm
+++ b/help/src/hid00109.htm
@@ -34,10 +34,18 @@
   </div>
 
   <dl>
+    <dt>V16.20 <span class="ver_date">(2024-01-22)</span></dt>
+    <dd>
+      ・SubDirList コマンドのダイアログで、右側移動操作によって、カーソル位置のサブディレクトリ下に入れるようにしました。これにより、すべてのディレクトリをたどることができます。<br>
+      ・Copy/Move コマンドのパラメータに SX を追加。SubDirList コマンドと同様のダイアログが開き、任意のディレクトリをコピー/移動先として選択できます。<br>
+      ・ファイル(/ディレクトリ)名検索ダイアログで、更新日付欄にマウスオーバーしたときに何日前かをヒント表示するようにしました。また、下部のオプションの表示と配置を少し整理。<br>
+      ・テキストビューアでスティッキーを表示している場合、テキスト内容によっては処理が重くなっていたのを改善。<br>
+    </dd>
+
     <dt>V16.19 <span class="ver_date">(2024-01-19)</span></dt>
     <dd>
       ・ファイル(/ディレクトリ)名検索ダイアログに「除外Dirs」を追加。検索から除外するディレクトリのマスクを指定できます(; で区切って複数指定可)。<br>
-      ・ファイル(/ディレクトリ)名検索ダイアログの更新日付に「相対」オプションを追加。結果リストで SaveAsFindSet コマンドを実行したとき、日付設定を今日からの相対指定として保存します。その検索設定ファイルを用いると、常に今日の日付から相対的に検索を行うため、例えば「最近７日以降のファイル」などの検索が可能になります。<br>
+      ・ファイル(/ディレクトリ)名検索ダイアログの更新日付に「相対」オプションを追加。結果リストで SaveAsFindSet コマンドを実行したとき、日付設定を今日からの相対指定として保存します。その検索設定ファイルを用いると、常に今日の日付から相対的に検索を行うため、例えば「最近７日以内のファイル」などの検索が可能になります。<br>
       ・ファイル(/ディレクトリ)名検索以外に、タグ検索、栞マーク検索、フォルダアイコン検索、ハードリンク列挙の結果リストについても SaveAsFindSet/LoadFindSet コマンドを利用できるようにしました。なお、検索設定ファイル保存時に、その時点でのソートモードも含めるようにしました。<br>
       ・LoadFindSet_* による検索設定の選択は、ポップアップメニューではなくダイアログで行うようにしました。<br>
       ・オプション設定 - テキストビューア に「禁則処理」を追加。指定した禁則文字について、ぶら下げ/追い出し処理を行います。また「ワードラップ」をチェックすると、英単語の途中で折り返さないようになります。<br>
