--- a/help/src/hid00007.htm
+++ b/help/src/hid00007.htm
@@ -466,7 +466,7 @@
     <dd>表示中の画像を印刷するためのダイアログを表示します(アイコンや再生中のアニメーションGIFは印刷不可)。<br>
       プリンターの設定の他、印刷位置やサイズなどを設定できます。スケールやオフセットなどは用紙サイズに対するパーセントで指定します。<br>
       <span class="tab_frame">文字</span>タブでは、文字入れの設定を行え、以下の書式文字列が使えます。<br>
-      　<b>$F</b>　パス付ファイル名<br>
+      　<b>$F</b>　パス付きファイル名<br>
       　<b>$B</b>　パス無しファイル名<br>
       　<b>$XT(</b>書式<b>)</b>　Exif撮影日時(取得できない場合はタイムスタンプ、クリップボードの場合は現在日時)<br>
       　　　　　書式: yyyy 年(4桁)、yy 年(2桁)、mm 月、dd 日、hh 時、nn 分、ss 秒<br>
