--- a/help/src/hid00010.htm
+++ b/help/src/hid00010.htm
@@ -281,8 +281,8 @@
       　<b>$P </b>　パス名<br>
       　<b>$P2</b>　パス名(\ を <a href="hid00009.htm#Show">オプション設定 - 一般1 - 表示</a>の「<b>ディレクトリ区切り</b>」に置換)<br>
       　<b>$B </b>　パス無しファイル名<br>
-      　<b>$F </b>　パス付ファイル名($P + $B)<br>
-      　<b>$F2</b>　パス付ファイル名($P2 + $B)<br>
+      　<b>$F </b>　パス付きファイル名($P + $B)<br>
+      　<b>$F2</b>　パス付きファイル名($P2 + $B)<br>
       　<b>$Z </b>　サイズ (ファイルリストの表示と同じ書式)<br>
       　<b>$Y </b>　サイズ (バイト単位、カンマ付)<br>
       　<b>$T </b>　タイムスタンプ(ファイルリストの表示と同じ書式)<br>
