--- a/help/src/hid00015.htm
+++ b/help/src/hid00015.htm
@@ -55,14 +55,14 @@
   </p>
   <p>
     パラメータには、以下の書式文字列が使えます。<br>
-    　<b>$F</b>　カレント側で選択されている(無ければカーソル行の)パス付ファイル名<br>
-    　<b>$C</b>　カーソル行のパス付ファイル名(選択なしの場合 $F と同じ)<br>
+    　<b>$F</b>　カレント側で選択されている(無ければカーソル行の)パス付きファイル名<br>
+    　<b>$C</b>　カーソル行のパス付きファイル名(選択なしの場合 $F と同じ)<br>
     　<b>$B</b>　$F からパス名を除いたファイル名部分<br>
     　<b>$N</b>　$B から拡張子を除いたファイル名主部<br>
-    　<b>$O</b>　反対側で選択されているパス付ファイル名<br>
+    　<b>$O</b>　反対側で選択されているパス付きファイル名<br>
     　<b>$P</b>　カレントパス名 (末尾の \ は無し)<br>
     　<b>$Q</b>　反対パス名 (末尾の \ は無し)<br>
-    　<b>$R</b>　反対側で選択中なら $O、無選択なら $Q\$B (<a href="hid00005.htm#DiffDir">ディレクトリの比較</a>の結果リストでは反対側カーソル位置のパス付ファイル名)<br>
+    　<b>$R</b>　反対側で選択中なら $O、無選択なら $Q\$B (<a href="hid00005.htm#DiffDir">ディレクトリの比較</a>の結果リストでは反対側カーソル位置のパス付きファイル名)<br>
     　<b>$X</b>　<b>NyanFi</b> の起動パス(末尾の \ は無し)<br>
     　<b>$D</b>　<b>NyanFi</b> の起動ドライブ(末尾の \ は無し、例: "D:")<br>
     　<b>$$</b>　$ そのもの<br>
