--- a/help/src/hid00052.htm
+++ b/help/src/hid00052.htm
@@ -6,32 +6,33 @@
   <title>ファイル(/ディレクトリ)名検索ダイアログ</title>
   <link rel="stylesheet" type="text/css" href="help.css">
   <object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
-    <param name="Keyword" value="CurrToOpp">
-    <param name="Keyword" value="Exif情報">
-    <param name="Keyword" value="FindFileDirDlg">
-    <param name="Keyword" value="FindFileDlg">
-    <param name="Keyword" value="FLAC">
-    <param name="Keyword" value="GPS情報">
-    <param name="Keyword" value="ID3タグ">
-    <param name="Keyword" value="LoadFindSet">
-    <param name="Keyword" value="MP3">
-    <param name="Keyword" value="NTFS">
-    <param name="Keyword" value="OpenStandard">
-    <param name="Keyword" value="SaveAsFindSet">
-    <param name="Keyword" value="WAV">
-    <param name="Keyword" value="xd2txlib.dll">
-    <param name="Keyword" value="コードページ">
-    <param name="Keyword" value="タグ">
-    <param name="Keyword" value="ファイル/ディレクトリ名検索ダイアログ">
-    <param name="Keyword" value="ファイル名検索ダイアログ">
-    <param name="Keyword" value="ライブラリファイル">
-    <param name="Keyword" value="リストファイル">
-    <param name="Keyword" value="改行コード">
-    <param name="Keyword" value="拡張検索">
-    <param name="Keyword" value="検索設定ファイル">
-    <param name="Keyword" value="正規表現">
-    <param name="Keyword" value="正規表現チェッカー">
-    <param name="Keyword" value="代替データストリーム">
+	<param name="Keyword" value="CurrToOpp">
+	<param name="Keyword" value="Exif情報">
+	<param name="Keyword" value="FindFileDirDlg">
+	<param name="Keyword" value="FindFileDlg">
+	<param name="Keyword" value="FLAC">
+	<param name="Keyword" value="GPS情報">
+	<param name="Keyword" value="ID3タグ">
+	<param name="Keyword" value="LoadFindSet">
+	<param name="Keyword" value="MP3">
+	<param name="Keyword" value="NTFS">
+	<param name="Keyword" value="OpenStandard">
+	<param name="Keyword" value="SaveAsFindSet">
+	<param name="Keyword" value="WAV">
+	<param name="Keyword" value="xd2txlib.dll">
+	<param name="Keyword" value="コードページ">
+	<param name="Keyword" value="タグ">
+	<param name="Keyword" value="ファイル/ディレクトリ名検索ダイアログ">
+	<param name="Keyword" value="ファイル名検索ダイアログ">
+	<param name="Keyword" value="ライブラリファイル">
+	<param name="Keyword" value="リストファイル">
+	<param name="Keyword" value="改行コード">
+	<param name="Keyword" value="拡張検索">
+	<param name="Keyword" value="検索設定ファイル">
+	<param name="Keyword" value="正規表現">
+	<param name="Keyword" value="正規表現チェッカー">
+	<param name="Keyword" value="代替データストリーム">
+	<param name="Keyword" value="特殊フォルダ識別名">
   </object>
 </head>
 
@@ -43,7 +44,7 @@
     また <a href="hid00005.htm#FindFileDirDlg">FindFileDirDlg</a> コマンドを実行するとファイル/ディレクトリ名検索ダイアログが開きます。<br>
     指定したマスク、検索語および、更新日付、サイズ、属性の条件にマッチするファイルをカレントパスで検索します。<br>
     ディレクトリが選択されている場合は、そのディレクトリが対象になります。またカレントにあるライブラリファイル(<b>.library-ms</b>)が選択されている場合も、ディレクトリの集合とみなして対象になります。<br>
-    <b>FindFileDlg</b> コマンドのパラメータで<b>リストファイル</b>が指定されている場合は、それに記述されているディレクトリが検索対象となります。<br>
+    <b>FindFileDlg</b> コマンドのパラメータで<b>リストファイル</b>や<b>特殊フォルダ識別名</b>が指定されている場合は、それに対応するディレクトリが検索対象となります。<br>
     なおカレントが結果リストだった場合、再度 <b>FindFileDlg</b> コマンドを実行すると、ファイル名の絞り込み検索を行えます(ディレクトリは無視)。
   </p>
 
