--- a/help/src/hid00056.htm
+++ b/help/src/hid00056.htm
@@ -334,7 +334,7 @@
     <dd>ファイル名や行番号の書式を指定します。<br>
       書式には以下の書式文字列を使えます。
       空欄の場合は "<b>$F $L:</b>" とみなされます。ファイル情報を除きたい場合は <b>\0</b> を指定してください。<br>
-      　<b>$F</b> : パス付ファイル名<br>
+      　<b>$F</b> : パス付きファイル名<br>
       　<b>$B</b> : パス無しファイル名<br>
       　<b>$L</b> : 行番号<br>
       　<b>\t</b> : タブ<br>
