--- a/help/src/hid00073.htm
+++ b/help/src/hid00073.htm
@@ -67,7 +67,7 @@
       </div>
 
       <div class="spc_box">
-        <a href="hid00005.htm#ListFileName">ListFileName</a> コマンドでファイル名一覧を表示している場合、<span class="btn_frame">Enter</span>キーを押すと、ダイアログを閉じてそのファイル位置に移動します(選択項目があればファイルリストに反映)。<br>
+        <a href="hid00005.htm#ListFileName">ListFileName</a> コマンドでファイル名一覧を表示している場合、<span class="btn_frame">Enter</span>キーを押すと、ダイアログを閉じてそのファイル位置に移動します(選択項目があればファイルリストに反映)。また <a href="hid00005.htm#CopyFileName">CopyFileName</a> が割り当てられているキーで選択中のファイル名をコピーできます。<br>
         <a href="hid00005.htm#ListTree">ListTree</a> コマンドによるディレクトリのツリー表示や、<a href="hid00005.htm#CopyDir">CopyDir</a>_LS
         コマンドによるディレクトリ名一覧表示の場合、<span class="btn_frame">Enter</span>キーを押すとカーソル位置のディレクトリに移動します。<br>
       </div>
