--- a/help/src/hid00076.htm
+++ b/help/src/hid00076.htm
@@ -69,6 +69,9 @@
           href="hid00005.htm#WinNormal">WinNormal</a> コマンドが割り当てられているキーを押すと、カーソル位置のアプリケーションのそれぞれのウィンドウ操作を行えます。
       </div>
       <div class="spc_box">
+        ファイラーで <a href="hid00005.htm#CopyFileName">CopyFileName</a> コマンドが割り当てられているキーを押すと、カーソル位置のアプリケーションの実行ファイル名をコピーできます。
+      </div>
+      <div class="spc_box">
         ファイラーで、<a href="hid00005.htm#ShowFileInfo">ShowFileInfo</a>
         コマンドが割り当てられているキーを押すと、カーソル位置のアプリケーションに関するさまざまな情報がダイアログで表示されます(右クリックメニュー「<b>アプリケーション情報を表示</b>」)。
       </div>
