--- a/help/src/hid00078.htm
+++ b/help/src/hid00078.htm
@@ -56,7 +56,7 @@
       </tr>
       <tr>
         <td><b>$F</b></td>
-        <td>パス付ファイル名($P + $B)</td>
+        <td>パス付きファイル名($P + $B)</td>
       </tr>
       <tr>
         <td><b>$T</b></td>
