--- a/help/src/hid00109.htm
+++ b/help/src/hid00109.htm
@@ -34,6 +34,16 @@
   </div>
 
   <dl>
+    <dt>V16.21 <span class="ver_date">(2024-01-24)</span></dt>
+    <dd>
+      ・NyanFi 上でクリップボードにコピーしたパス付きファイル名を履歴として保持するようにしました。この履歴は、ListFileName コマンドに追加された <b>CH</b> パラメータによって一覧表示することができます。なお、保持されている履歴のうち最大50個はINIファイルに保存され、次回起動時にも参照できます。<br>
+      ・ファイル名一覧(ListFileName)で、CopyFileName が割り当てられているキーによって選択項目のファイル名をコピーできるようにしました。<br>
+      ・アプリケーション一覧(AppList)で、CopyFileName が割り当てられているキーによってカーソル位置のアプリケーションの実行ファイル名をコピーできるようにしました。<br>
+      ・LoadFindSet_* コマンドで表示される検索設定選択ダイアログで、右クリックメニューに「表示色の設定」、「除外ディレクトリの設定」、および「リストファイルの編集」を追加。<br>
+      ・FindFileDlg コマンドのパラメータに特殊フォルダを表す識別名を指定できるようにしました。識別名は $ で始まり($STARTMENU、$STARTUP、$DESKTOP、$DOCUMENT、$PICTURE、$VIDEO、$MUSIC)、対応するディレクトリのリストに置き換えられます。例えば FindFileDlg_R1;$STARTMENU を実行すると、現在のユーザおよびパブリックのスタートメニュー・ディレクトリ下にあるファイルをまとめて検索できます。<br>
+      ・検索設定ファイル(LoadFindSet)による検索結果に対して、 FindFileDlg コマンドによる絞り込み検索ができなかったのを修正。<br>
+    </dd>
+
     <dt>V16.20 <span class="ver_date">(2024-01-22)</span></dt>
     <dd>
       ・SubDirList コマンドのダイアログで、右側移動操作によって、カーソル位置のサブディレクトリ下に入れるようにしました。これにより、すべてのディレクトリをたどることができます。<br>
