--- a/help/src/hid00002.htm
+++ b/help/src/hid00002.htm
@@ -138,7 +138,7 @@
   <p>
     <b>source</b> ディレクトリにはソースコード(<b>C++Builder 12</b> 用)がありますので、自由にご利用ください。<br>
     なお、本体からメニューやコマンドによってダウンロードしたアーカイブには、ソースコードが含まれていません。<br>
-    必要な場合、<b>GitHub</b> や公開サイトから別途取得してください。
+    必要な場合は <b>GitHub</b> から別途取得してください。
   </p>
   <br>
 
