--- a/help/src/hid00012.htm
+++ b/help/src/hid00012.htm
@@ -46,7 +46,7 @@
       <b>パラメータ (GREPやビューアでのタグジャンプ用)</b> <img src="edit.png" alt=""> <span class="def_text">(デフォルト: $F)</span> で、<a href="hid00056.htm">文字列検索(GREP)</a>の結果リストからエディタで開くときや、<a href="hid00006.htm">テキストビューア</a>からタグジャンプ(<a
         href="hid00006.htm#TagJump">TagJump</a>)や<a href="hid00083.htm">ダイレクトタグジャンプ</a>(<a
         href="hid00006.htm#TagJumpDirect">TagJumpDirect</a>)を行う際のパラメータを指定できます。<br>
-      パラメータでは書式文字列として <b>$F</b> : パス付ファイル名 と <b>$L</b> : 行番号 を使えます(<b>例</b> -g $F:$L)。<br>
+      パラメータでは書式文字列として <b>$F</b> : パス付きファイル名 と <b>$L</b> : 行番号 を使えます(<b>例</b> -g $F:$L)。<br>
       また、<b>(ファイラー用)</b> <img src="edit.png" alt=""> <span class="def_text">(デフォルト: $F)</span> では、ファイラーで <a href="hid00005.htm#FileEdit">FileEdit</a> コマンドによってテキストファイルを開く際のパラメータを指定できます(書式文字列は <b>$F</b> のみ使用可)。<br>
       <br>
     </dd>
